@@ -1,2 +1,3 @@
 #!/usr/bin/env bash
-jruby --1.9 --client -S trinidad --config
+export JRUBY_OPTS="--1.9 --client -J-Djruby.reify.classes=true -J-Xmx1024m -J-XX:+UseConcMarkSweepGC -J-XX:+UseParNewGC"
+jruby -S trinidad --config
